compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_private_type_leak_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 806
expression: "type PrivateType\npub type LeakType { Variant(PrivateType) }"
---
error: Private type used in public interface
  ┌─ /src/one/two.gleam:2:21
  │
2 │ pub type LeakType { Variant(PrivateType) }
  │                     ^^^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.

