compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__narrowed_record_update_change_type_parameter.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Box(a) {\n  Locked(password: String, value: a)\n  Unlocked(password: String, value: a)\n}\n\npub fn main() {\n  let box = Locked(\"ungu€$$4bLe\", 11)\n  case box {\n    Locked(..) as box -> Locked(..box, value: True)\n    Unlocked(..) as box -> Unlocked(..box, value: False)\n  }\n}\n"
---
----- SOURCE CODE

pub type Box(a) {
  Locked(password: String, value: a)
  Unlocked(password: String, value: a)
}

pub fn main() {
  let box = Locked("ungu€$$4bLe", 11)
  case box {
    Locked(..) as box -> Locked(..box, value: True)
    Unlocked(..) as box -> Unlocked(..box, value: False)
  }
}


----- ERROR
error: Type mismatch
   ┌─ /src/one/two.gleam:10:47
   │
10 │     Locked(..) as box -> Locked(..box, value: True)
   │                                               ^^^^

Expected type:

    Int

Found type:

    Bool

error: Type mismatch
   ┌─ /src/one/two.gleam:11:51
   │
11 │     Unlocked(..) as box -> Unlocked(..box, value: False)
   │                                                   ^^^^^

Expected type:

    Int

Found type:

    Bool
